--- a/src/web/template/listItem.html
+++ b/src/web/template/listItem.html
@@ -12,7 +12,7 @@
         </span>
     </div>
     <div class="code">
-
+        <pre class="brush: <%=codetype%>; toolbar: false;"><%=code%></pre>
     </div>
 </li>
 
