--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -92,7 +92,7 @@ li.listitem{
     border:1px solid #1f6bb9;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-    background:#000a28;
+    background:#0F192A;
     overflow: hidden;
     margin-bottom:30px;
 }
@@ -139,4 +139,74 @@ li.listitem{
     color:#ccc;
     padding-left:20px;
     padding-right:20px;
+}
+
+.modal_bg{
+    position:fixed;
+    top:0px;
+    bottom: 0px;
+    left:0px;
+    right:0px;
+    z-index: 9999;
+    background:#333;
+    opacity: 0.5;
+    display: none;
+}
+.dlg{
+    position:absolute;
+    z-index: 10000;
+    display: none;
+}
+#footer{
+     
+    padding-top:15px;
+    padding-bottom:15px;
+    border-top:1px solid #ccc;
+    color: #fff;
+    
+    font-weight:bold;
+}
+
+#footer .developer{
+    
+    float:right;    
+}
+#footer  a{
+    text-decoration: none;
+}
+#footer #author_github{
+    text-decoration: none;
+    background:#ccc;
+    padding-top:8px;
+    padding-bottom: 8px;
+    padding-left:4px;
+    padding-right:4px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    border-top: 1px solid white;
+    border-left: 1px solid white;
+    border-bottom: 1px solid #333;
+    border-right: 1px solid #333;
+    color:#333;
+    font-weight:bold;
+    text-shadow:  1px -1px 1px #ffffff;
+    filter: dropshadow(color=#ffffff, offx=0, offy=-1);
+}
+#footer #loadMore{
+    color:#fff;
+    display: block;
+    text-align: center;
+    font-weight:bold;
+
+}
+#footer .smallFont{
+    font-size:0.8em;
+}
+#footer  img{
+    vertical-align: middle;
+    margin-right: 5px;
+}
+#footer #loadingList{
+    text-align: center;;
+    display: none;
 }
