--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -107,6 +107,10 @@ li.listitem{
     overflow: hidden;
     margin-bottom:30px;
 }
+li.listitem a{
+    color:white;
+    
+}
 .listitem_header{
     background:#0e1d48;
     border-bottom:1px solid white;
@@ -187,7 +191,8 @@ li.listitem{
     float:right;    
 }
 #footer  a{
-    text-decoration: none;
+    
+    color:white;
 }
 #footer #author_github{
     text-decoration: none;
